--- a/todo.txt
+++ b/todo.txt
@@ -2,9 +2,8 @@
  - cuidar das warnings referentes aos typos [FEITO]
  - criar funções para evitarmos o warning de código duplicado [FEITO]
      - criarmos uma só função para a movimentação das paddles [FEITO]
-     - criarmos uma só função para detecção de colisão com a parede e com a paddle) [FEITO]
  - ajustar a velocidade do jogo (no meu computador o jogo está rápido demais) [FEITO]
- - criarmos uma estado final para o jogo, vitória após 10 pontos
+ - criarmos uma estado final para o jogo, vitória após 10 pontos [FEITO]
  - tratar eventuais bugs que possam ocorrer em uma das plataformas (Windows ou Linux) [FEITO]
 
 
